--- a/index.html
+++ b/index.html
@@ -4,20 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Influencer-Gear</title>
 </head>
 <body>
 
-    <header>
+    <header class="header-area">
+        <div class="header-flex">
+            <div class="header-logo">
+                <h1>Influencer Products</h1>
+            </div>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Products</a></li>
+                        <li><a href="">Sign up</a></li>
+                        <li><a href="">Log in</a></li>
+                        <li><a href="">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </a></li>
+                        <li><a href="">
+                            <i class="fa-solid fa-truck"></i>
+                        </a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+        <div class="header-banner">
+            <div class="header-banner-flex">
+                <div class="banner-content">
+                    <h1>Start your Journey as<br> 
+                        Influencer</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem<br>vestibulum sed   eros. Lectus faucibus.</p>
+                        <button class="btn-button">Prebook Now
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </button>
+                </div>
+                <div class="banner-image">
+                    <div>
+                        <img src="images/main-camera.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </header>
 
     <main>
+        
 
     </main>
 
     <footer>
-        
+
     </footer>
 
 </body>
