--- a/index.html
+++ b/index.html
@@ -55,13 +55,200 @@
 
     </header>
 
-    <main>
+    <main> 
         
+        <!-------------Sponsor Area ----------------->
+        
+        <section class="our-sponsors-flex">
+            <div class="sponsors"><img src="logos/Alibaba.svg" alt=""></div>
+            <div class="sponsors"><img src="logos/Amazon.svg" alt=""></div>
+            <div class="sponsors"><img src="logos/Daraz.pk Logo.svg" alt=""></div>
+            <div class="sponsors"><img src="logos/Ebay.svg" alt=""></div>
+            <div class="sponsors"><img src="logos/Rakuten.svg" alt=""></div>
+            <div class="sponsors"><img src="logos/Target.svg" alt=""></div>
+            <div class="sponsors"><img src="logos/Walmart.svg" alt=""></div>
+        </section>
+
+        <!-------------------Collection Area----------------------------->
+
+        <section class="collection-area">
+            <h2 class="section-title">Popular Collection</h2>
+            <div class="collection-cards-grid">
+                <div class="single-card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <span class="card-value">$50.48</span>
+                    <ul>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/star-half.svg" alt=""></li>
+                        <li>4.99</li>
+                    </ul>
+                    <p>Wordwide shifting available<br>
+                        Buyers protection possible!</p>
+                </div>
+                <div class="single-card">
+                    <img src="images/mic.png" alt="">
+                    <h3>microphone</h3>
+                    <span class="card-value">$120.25</span>
+                    <ul>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li>4.99</li>
+                    </ul>
+                    <p>Wordwide shifting available<br>
+                        Buyers protection possible!</p>
+                </div>
+                <div class="single-card">
+                    <img src="images/airpod.png" alt="">
+                    <h3>AirBuds</h3>
+                    <span class="card-value">$100.00</span>
+                    <ul>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li>4.99</li>
+                    </ul>
+                    <p>Wordwide shifting available<br>
+                        Buyers protection possible!</p>
+                </div>
+                <div class="single-card">
+                    <img src="images/drone.png" alt="">
+                    <h3>Drone</h3>
+                    <span class="card-value">$980.25</span>
+                    <ul>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li>4.99</li>
+                    </ul>
+                    <p>Wordwide shifting available<br>
+                        Buyers protection possible!</p>
+                </div>
+                <div class="single-card">
+                    <img src="images/lights.png" alt="">
+                    <h3>Light Setup</h3>
+                    <span class="card-value">$1200.00</span>
+                    <ul>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li>4.99</li>
+                    </ul>
+                    <p>Wordwide shifting available<br>
+                        Buyers protection possible!</p>
+                </div>
+                <div class="single-card">
+                    <img src="images/setup.png" alt="">
+                    <h3>Photoshoot Set</h3>
+                    <span class="card-value">$820.40</span>
+                    <ul>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li>4.99</li>
+                    </ul>
+                    <p>Wordwide shifting available<br>
+                        Buyers protection possible!</p>
+                </div>
+                <div class="single-card">
+                    <img src="images/camera.png" alt="">
+                    <h3>Vlogging Camera</h3>
+                    <span class="card-value">$1800.80</span>
+                    <ul>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li>4.99</li>
+                    </ul>
+                    <p>Wordwide shifting available<br>
+                        Buyers protection possible!</p>
+                </div>
+                <div class="single-card">
+                    <img src="images/single-light.png" alt="">
+                    <h3>Green Screen</h3>
+                    <span class="card-value">$25.48</span>
+                    <ul>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li>4.99</li>
+                    </ul>
+                    <p>Wordwide shifting available<br>
+                        Buyers protection possible!</p>
+                </div>
+                <div class="single-card">
+                    <img src="images/action.png" alt="">
+                    <h3>Action Camera</h3>
+                    <span class="card-value">$380.00</span>
+                    <ul>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li><img src="images/icon-star.png" alt=""></li>
+                        <li>4.99</li>
+                    </ul>
+                    <p>Wordwide shifting available<br>
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <p class="see-more">See more 
+                <i class="fa-solid fa-arrow-right"></i>
+            </p>
+        </section>   
+
+        <!------------------- Featured Area --------------------------->
+
+        <section class="featured-area">
+            <div class="featured">
+                <div class="featured-image">
+                    <img src="images/gear.png" alt=""> 
+                </div>
+
+                <div class="featured-content">
+                    <h2>Featured products at one place</h2>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="btn-button">Join Now
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+            </div>
+        </section>         
 
     </main>
 
     <footer>
-
+        <section class="footer-area">
+            <div class="footer-content">
+                <h2>Influencer Products</h2>
+                <p>Copyright © 2020  influencer products<br>
+                All rights reserved </p>
+                <ul>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-youtube"></i></li>
+                </ul>
+            </div>
+        </section>
     </footer>
 
 </body>
