responsive and css updated

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <!------------------- Featured Area --------------------------->
 
         <section class="featured-area">
-            <div class="featured">
+            <div class="featured-grid">
                 <div class="featured-image">
                     <img src="images/gear.png" alt=""> 
                 </div>
