--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2 class="section-title">Popular Collection</h2>
             <div class="collection-cards-grid">
                 <div class="single-card">
-                    <img src="images/tripod.png" alt="">
+                    <img class="img-dv" src="images/tripod.png" alt="">
                     <h3>Flex Tripod</h3>
                     <span class="card-value">$50.48</span>
                     <ul>
@@ -90,7 +90,7 @@
                         Buyers protection possible!</p>
                 </div>
                 <div class="single-card">
-                    <img src="images/mic.png" alt="">
+                    <img class="img-dv" src="images/mic.png" alt="">
                     <h3>microphone</h3>
                     <span class="card-value">$120.25</span>
                     <ul>
@@ -105,7 +105,7 @@
                         Buyers protection possible!</p>
                 </div>
                 <div class="single-card">
-                    <img src="images/airpod.png" alt="">
+                    <img class="img-dv" src="images/airpod.png" alt="">
                     <h3>AirBuds</h3>
                     <span class="card-value">$100.00</span>
                     <ul>
@@ -120,7 +120,7 @@
                         Buyers protection possible!</p>
                 </div>
                 <div class="single-card">
-                    <img src="images/drone.png" alt="">
+                    <img class="img-dv" src="images/drone.png" alt="">
                     <h3>Drone</h3>
                     <span class="card-value">$980.25</span>
                     <ul>
@@ -135,7 +135,7 @@
                         Buyers protection possible!</p>
                 </div>
                 <div class="single-card">
-                    <img src="images/lights.png" alt="">
+                    <img class="img-dv" src="images/lights.png" alt="">
                     <h3>Light Setup</h3>
                     <span class="card-value">$1200.00</span>
                     <ul>
@@ -150,7 +150,7 @@
                         Buyers protection possible!</p>
                 </div>
                 <div class="single-card">
-                    <img src="images/setup.png" alt="">
+                    <img class="img-dv" src="images/setup.png" alt="">
                     <h3>Photoshoot Set</h3>
                     <span class="card-value">$820.40</span>
                     <ul>
@@ -165,7 +165,7 @@
                         Buyers protection possible!</p>
                 </div>
                 <div class="single-card">
-                    <img src="images/camera.png" alt="">
+                    <img class="img-dv" src="images/camera.png" alt="">
                     <h3>Vlogging Camera</h3>
                     <span class="card-value">$1800.80</span>
                     <ul>
@@ -180,7 +180,7 @@
                         Buyers protection possible!</p>
                 </div>
                 <div class="single-card">
-                    <img src="images/single-light.png" alt="">
+                    <img class="img-dv" src="images/single-light.png" alt="">
                     <h3>Green Screen</h3>
                     <span class="card-value">$25.48</span>
                     <ul>
@@ -195,7 +195,7 @@
                         Buyers protection possible!</p>
                 </div>
                 <div class="single-card">
-                    <img src="images/action.png" alt="">
+                    <img class="img-dv" src="images/action.png" alt="">
                     <h3>Action Camera</h3>
                     <span class="card-value">$380.00</span>
                     <ul>
